<resources>
    <string name="app_name">MAD_PROJECT</string>
    <string name="title_my_class">My Class</string>
    <string name="title_Enrollment">Enrollment</string>
    <string name="title_News">News</string>
    <string name="title_Upload_a_student_card">Upload a Student Card</string>
    <string name="title_My_Attendance">My Attendance</string>
    <string name="title_my_score">My Score</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    TODO: String FOR SignInActivity -->
    <string name="title_sign_in">Sign In</string>
    <string name="subtitle_sign_in">Welcome Back</string>
    <string name="email_sign_in">Email</string>
    <string name="password_sign_in">Password</string>
    <string name="button_sign_in">Sign In</string>

    <!--    TODO : String For Setting Activity -->
    <string name="name_Setting_Activity"> Name :</string>
    <string name="major_Setting_Activity"> Major :</string>
    <string name="sex_Setting_Activity"> Sex :</string>
    <string name="date_of_birth_Setting_Activity"> Date Of Birth :</string>
    <string name="enrollment_Setting_Activity"> Enrollment :</string>
    <string name="year_of_study_Setting_Activity"> Year Of Study :</string>
    <string name="generation_Setting_Activity"> Generation :</string>
    <string name="email_Setting_Activity"> Email </string>
    <string name="phone_Setting_Activity"> Phone :</string>
    <string name="payment_Setting_Activity"> payment :</string>
    <string name="term_Setting_Activity"> Term </string>
    <string name="paid_amount_Setting_Activity"> Paid Amount :</string>
    <string name="remark_Setting_Activity"> Remark :</string>
    <string name="button_paynow">pay now</string>

    <!--    TODO: String For Enrollment Activity -->
    <string name="title_enrollment">Enrollment</string>
    <string name="title_start_term">Start Term</string>
    <string name="title_morning">Morning</string>
    <string name="title_afternoon">Afternoon</string>
    <string name="title_Term_payment">Term Payment</string>
    <string name="title_Full_Term">Term Payment</string>
    <string name="title_Only_one_Semester">Only one Semester</string>
    <string name="title_Date_and_Time">Date and Time</string>
    <string name="title_Enter_the_Date">Enter the Date</string>
    <string name="title_semster">semster</string>
    <string name="title_Class">Class</string>
    <string name="title_Make_a_Payment">Make a Payment</string>

    <!--    TODO: String For Profile Activity -->

    <string name="title_name">Name</string>
    <string name="title_Profile">Profile</string>
    <string name="title_Setting">Setting</string>
    <string name="title_Language">Language</string>
    <string name="title_Logout">Logout</string>

    <!--    TODO: String For Upload ID Card -->
    <string name="title_upload_a_students_card">Upload a students card</string>
    <string name="title_Upload_ID_Card">Upload ID Card</string>
    <string name="title_Browse">Browse</string>

</resources>
