<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".fragment.HomeFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        >
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/content_item"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:gravity="center"
                android:id="@+id/container_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView

                    android:layout_width="match_parent"
                    android:layout_height="140dp"

                    android:src="@drawable/news_list_demo"/>
                <RadioGroup

                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_width="200dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="10dp"
                    >

                    <RadioButton
                        android:checked="false"
                        android:gravity="center"
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:gravity="center"

                        android:layout_width="30dp"
                        android:layout_height="wrap_content"/>
                    <RadioButton
                        android:layout_width="30dp"
                        android:layout_height="wrap_content"/>

                </RadioGroup>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"



                    />


            </LinearLayout>
            <GridLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:columnCount="3"
                android:rowCount="2"

                >

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_myclass"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:background="@drawable/shap_card"
                    android:elevation="4dp"
                    app:cardBackgroundColor="@color/bg_card"
                    app:cardCornerRadius="20dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shap_card"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_classroom" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/shape_text"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="5dp"
                            android:text="@string/title_my_class"
                            android:textColor="@color/text_color_primary"
                            android:textSize="8dp" />
                    </LinearLayout>


                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_enrollment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/bg_card"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shap_card"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:backgroundTint="@color/primary"
                            android:src="@mipmap/ic_enrollment" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"

                            android:background="@drawable/shape_text"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="5dp"
                            android:text="@string/title_Enrollment"
                            android:textColor="@color/text_color_primary"
                            android:textSize="8dp" />
                    </LinearLayout>




                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_news"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="0"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:elevation="4dp"
                    app:cardCornerRadius="20dp"
                    android:layout_margin="5dp"
                    app:cardBackgroundColor="@color/bg_card"
                    >

                    <LinearLayout
                        android:id="@+id/show_news"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shap_card"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_news" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/shape_text"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="5dp"
                            android:text="@string/title_News"
                            android:textColor="@color/text_color_primary"
                            android:textSize="8dp" />
                    </LinearLayout>




                </androidx.cardview.widget.CardView>


                <androidx.cardview.widget.CardView
                    android:id="@+id/card_upload_studentcard"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="0"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/bg_card"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shap_card"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"

                            android:src="@mipmap/ic_upload_studentcard" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/shape_text"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="5dp"
                            android:text="@string/title_Upload_a_student_card"
                            android:textColor="@color/text_color_primary"
                            android:textSize="8dp" />
                    </LinearLayout>




                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_myAttendence"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="1"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/bg_card"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shap_card"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_my_attendent" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/shape_text"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="5dp"
                            android:text="@string/title_My_Attendance"
                            android:textColor="@color/text_color_primary"
                            android:textSize="8dp" />
                    </LinearLayout>




                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_myScore"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_row="1"
                    android:layout_column="2"
                    android:layout_columnWeight="1"
                    android:layout_margin="5dp"
                    android:elevation="4dp"
                    app:cardCornerRadius="20dp"
                    app:cardBackgroundColor="@color/bg_card"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/shap_card"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <ImageView
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_my_score" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/shape_text"
                            android:paddingHorizontal="8dp"
                            android:paddingVertical="5dp"
                            android:text="@string/title_my_score"
                            android:textColor="@color/text_color_primary"
                            android:textSize="8dp" />
                    </LinearLayout>




                </androidx.cardview.widget.CardView>
                <!-- row 1  -->





            </GridLayout>





        </LinearLayout>






    </androidx.constraintlayout.widget.ConstraintLayout>




</FrameLayout>